Added the loading state

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <h1 class="nav__left bolder">Cinemate Universe</h1>
             <div class="nav__right">
                 <ul>
-                    <li class="bolder"><a href="" class="nav__anchor">Home</a></li>
-                    <li class="bolder"><a href="" class="nav__anchor">Popular</a></li>
-                    <li class="bolder"><a href="" class="nav__anchor">New Arrivals</a></li>
+                    <li class="bolder"><span class="nav__anchor">Home</span></li>
+                    <li class="bolder"><span class="nav__anchor">Browse Movies</span></li>
                 </ul>
             </div>
           </nav>
