Added the loading state

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <div class="row">
                 <h2 class="search__results">Search Results For: </h2>
                 <div class="movies">
-                    
-                    
+                    <i class="fas fa-spinner movie__loading--spinner"></i>
                 </div>
             </div>
         </div>
