Added the Sorting Option

--- a/movie.html
+++ b/movie.html
@@ -40,5 +40,8 @@
         </div>
       </div>
     </main>
+    <footer>
+        <p class="footer__para">Copyright &copy; Bhuiyan Shadman Wasif, 2023</p>
+    </footer>
   </body>
 </html>
