--- a/index.html
+++ b/index.html
@@ -40,12 +40,27 @@
     <main>
         <div class="container">
             <div class="row">
-                <h2 class="search__results">Search Results For: </h2>
-                <div class="movies">
+                <div class="search__sort">
+                    <h2 class="search__results">Search Results For: </h2>
+                    <div class="sort">
+                        <select name="" id="filter">
+                            <option value="Sort" selected disabled>Sort</option>
+                            <option value="New To Old">New To Old</option>
+                            <option value="Old To New">Old To New</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="loading">
                     <i class="fas fa-spinner movie__loading--spinner"></i>
+                </div>
+                <div class="movies">
+                    
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <p class="footer__para">Copyright &copy; Bhuiyan Shadman Wasif, 2023</p>
+    </footer>
   </body>
 </html>
