--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
           </nav>
           <div class="search">
-            <input type="text" class="search__btn" placeholder="Search your favorite Movies">
+            <input type="text" class="search__btn" placeholder="Search Movies">
             <button class="magnify">
                 <i class="fa-solid fa-magnifying-glass magnify__search"></i>
             </button>
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container movie__container">
             <div class="row">
                 <div class="search__sort">
                     <h2 class="search__results">Search Results For: </h2>
