Added the responsiveness

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <div class="container movie__container">
             <div class="row">
                 <div class="search__sort">
-                    <h2 class="search__results">Search Results For: </h2>
+                    <div class="search__left">
+                        <i class="fas fa-adjust toggle"></i>
+                        <h2 class="search__results">Search Results For: </h2>
+                    </div>
                     <div class="sort">
                         <select name="" id="filter">
                             <option value="Sort" selected disabled>Sort</option>
