--- a/movie.html
+++ b/movie.html
@@ -27,9 +27,12 @@
     </div>
     <main>
       <div class="container">
-        <div class="row">
-          <a href="./index.html"><i class="fa-solid fa-backward back__arrow"></i></a>
-          <a href="./index.html"><h1 class="back__title">Go Back</h1></a>
+        <div class="row movie__row">
+            <div>
+                <a href="./index.html"><i class="fa-solid fa-backward back__arrow"></i></a>
+                <a href="./index.html"><h1 class="back__title">Go Back</h1></a>
+            </div>
+            <i class="fas fa-adjust toggle"></i>
         </div>
       </div>
       <div class="container">
