--- a/movie.html
+++ b/movie.html
@@ -28,23 +28,23 @@
     <main>
       <div class="container">
         <div class="row movie__row">
-            <div>
-                <a href="./index.html"><i class="fa-solid fa-backward back__arrow"></i></a>
-                <a href="./index.html"><h1 class="back__title">Go Back</h1></a>
-            </div>
-            <i class="fas fa-adjust toggle"></i>
+          <div>
+            <a href="./index.html"
+              ><i class="fa-solid fa-backward back__arrow"></i
+            ></a>
+            <a href="./index.html"><h1 class="back__title">Go Back</h1></a>
+          </div>
+          <i class="fas fa-adjust toggle movie__page--toggle"></i>
         </div>
       </div>
       <div class="container">
         <div class="row">
-            <div class="movie__content">
-                
-            </div>
+          <div class="movie__content"></div>
         </div>
       </div>
     </main>
     <footer>
-        <p class="footer__para">Copyright &copy; Bhuiyan Shadman Wasif, 2023</p>
+      <p class="footer__para">Copyright &copy; Bhuiyan Shadman Wasif, 2023</p>
     </footer>
   </body>
 </html>
