--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script>
+      window.embeddedChatbotConfig = {
+      chatbotId: "GzHxYIvezJajw7cAn185b",
+      domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="GzHxYIvezJajw7cAn185b"
+      domain="www.chatbase.co"
+      defer>
+      </script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
